create db & enums & entities for writing exercises

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,5 +15,5 @@ spring:
   jwt:
     secret: ${JWT_SECRET}
     accessTokenExpiration: 60000
-    refreshTokenExpiration: 300000
+    refreshTokenExpiration: 604800000
 #    refreshTokenExpiration: 604800000
