--- a/pom.xml
+++ b/pom.xml
@@ -133,9 +133,9 @@
                 <artifactId>flyway-maven-plugin</artifactId>
                 <version>10.15.0</version>
                 <configuration>
-                    <url>jdbc:mysql://localhost:3306/store_api?createDatabaseIfNotExist=true</url>
+                    <url>jdbc:mysql://localhost:3306/enginuity?createDatabaseIfNotExist=true</url>
                     <user>root</user>
-                    <password>MyPassword!</password>
+                    <password>21042003</password>
                     <cleanDisabled>false</cleanDisabled>
                 </configuration>
             </plugin>
