Feature/practice speaking (#1)
* init speaking session

* calling api to create questions set

* submit response

* submit session and scoring

* evaluate speaking session

* get all sessions

* fixing parsing enum part

--- a/pom.xml
+++ b/pom.xml
@@ -151,7 +151,7 @@
                 <configuration>
                     <url>jdbc:mysql://localhost:3306/enginuity?createDatabaseIfNotExist=true</url>
                     <user>root</user>
-                    <password>admin</password>
+                    <password>21042003</password>
                     <cleanDisabled>false</cleanDisabled>
                 </configuration>
             </plugin>
