--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,17 +4,17 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/enginuity?createDatabaseIfNotExist=true
     username: root
-    password: admin
+    password: 21042003
   flyway:
     enabled:  true
     url: jdbc:mysql://localhost:3306/enginuity?createDatabaseIfNotExist=true
     user: root
-    password: admin
+    password: 21042003
   jpa:
     show-sql: true
   jwt:
     secret: ${JWT_SECRET}
-    accessTokenExpiration: 600000000
+    accessTokenExpiration: 300000
     refreshTokenExpiration: 604800000
 #    refreshTokenExpiration: 604800000
 bunny:
@@ -27,7 +27,7 @@ bunny:
 openai:
   api:
     key: ${OPENAI_API_KEY}
-  model: gpt-4-turbo
+  model: gpt-3.5-turbo
   maxTokens: 3000
   temperature: 0.4
   timeout: 300
